test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_accessing_private_struct_member_inside_function_generated_at_comptime/src/main.nr

    mod foo {
        pub struct Foo {
            foo_inner: Field,
        }
    }

    use foo::Foo;

    #[generate_inner_accessor]
    struct Bar {
        bar_inner: Foo,
    }

    comptime fn generate_inner_accessor(_s: TypeDefinition) -> Quoted {
        quote {
            fn bar_get_foo_inner(x: Bar) -> Field {
                x.bar_inner.foo_inner
            }
        }
    }

    fn main(x: Bar) {
        let _ = bar_get_foo_inner(x);
    }
    